<resources>
    <string name="app_name">Cape Fear Garden Club, Inc.</string>
    <string name="Login">Submit</string>
    <string name="Clear">Clear</string>
    <string name="LoginID">LoginID</string>
    <string name="Password">Password</string>
    <string name="Description">Description Holder</string>
    <string name="Name">Name Holder</string>
    <string name="MemberStatus">Member Status</string>
    <string name="SpouseName">Spouse Name</string>
    <string name="Address">Address</string>
    <string name="PrimaryContact">Primary Contact</string>
    <string name="SecondaryContact">Secondary Contact</string>
    <string name="Email">Email</string>
    <string name="Text">Text</string>
    <string name="Call">Call</string>
    <string name="search_hint">Search the directory</string>
    <string name="PlaceHolder">Place Holder</string>
    <string name="member_status">Member Status</string>
    <string name="more_info">More Info</string>
    <string name="back">Back</string>
    <string name="bio_info">Biographical Info</string>
    <string name="year_active">Year Turned Active</string>
    <string name="dyk">Did You Know?</string>
    <string name="edit">Edit</string>
    <string name="userNoBio">You don\'t have a bio yet. Tap here to add one</string>
    <string name="error_save">Error: Information was not successfully saved</string>
    <string name="succ_save">Information successfully saved</string>
    <string name="cfgc_member_since">CFGC Member Since</string>
    <string name="azalea">2020 Azalea Garden Tour</string>
    <string name="this_box_is_going_to_contain_text_from_azalea_tour_website_with_current_year_theme">
        On behalf of the 401 members of the Cape Fear Garden Club, we thank you for joining us for
        the 2020 Azalea Garden Tour. The proceeds from the Garden Tour ticket sales are given back
        to our community each fall as grants to other non-profits for education, beautification and
        conservation of our native trees, plants and birds. As you make your way from garden
        to garden, you’ll pass by many beautiful spots around town: schools, parks, museums and
        roadways. There’s a good chance that through your purchase of an Azalea Garden Tour ticket,
        the Cape Fear Garden Club was able to enhance and preserve the beauty of many of these
        places in our community. Since 2003, the proceeds from the Azalea Garden Tour have
        supported local non-profits with grants from the Cape Fear Garden Club totaling over
        $1,209,000.
    </string>
    <string name="_2020_gardens_and_map">2020 Gardens and Map</string>
    <string name="azalea_belles">Azalea Belles©</string>
    <string name="battery_island_committee">Battery Island Committee</string>
    <string name="civic_impact">Civic Impact</string>
    <string name="membership">Membership</string>
    <string name="this_box_is_going_to_contain_text_from_battery_island_committee_info">
        Battery Island Committee highlights the
        twenty-three-year relationship that The Cape Fear Garden Club, Inc. has in
        working closely with Audubon NC’s Coastal Office and biologists to maintain safe
        habitats for the migratory birds, specifically the islands in the Lower Cape Fear
        River where they nest.

        \n\nThe Cape Fear Garden Club, Inc. assists Audubon in
        funding through a standing annual grant and through education outreach by
        sponsoring the annual Spring Cruise to the Bird Islands in the Lower Cape Fear
        River each May. This committee supports Audubon with cleanups on Battery
        Island in the spring before nesting season begins and the fall after the nesting
        season is complete. Our main concern is to get debris that floats in off the Cape
        Fear River and specifically fishing line off the island because of the danger of
        entanglement of pelicans and other shorebirds. The Committee also does the
        detailed planning and coordination for The Cape Fear Garden Club for the
        Spring Cruise to the Bird Islands in the Lower Cape Fear River.
    </string>
    <string name="back_to_bird_islands_cruise">Back to Bird Islands Cruise</string>
    <string name="this_box_is_going_to_contain_text_from_battery_island_cruise_and_ticket_info">
        Mark Your Calendar for the 2020 Cruise!

        \n\nThe Bird Battery Island/Birds of the Lower Cape Fear Cruise will sail on Sunday,
        May 17, 2020.
        \nBoarding: 10:30 am
        \nDeparting: 11:00 am
        \nTickets go on sale February 26, 2020.

        \n\nThe cruise is an educational experience and viewing is narrated by three experts
        who will share their knowledge with us:
        \n\t\t\t· Dr. James Parnell, Professor Emeritus of UNCW and North Carolina’s top ornithologist.
        \n\t\t\t· Walker Golder, National Audubon Society’s Director of the Eastern Flyway
        Coast Initiative which includes the North Carolina program as well as programs in
        eight states along the Atlantic Coast.
        \n\t\t\t· Lindsay Addison, Audubon North Carolina’s Coastal Biologist speaks
        describing her work to monitor the nesting colonies on the six bird islands the Cape
        Fear River including Battery Island.

        \n\nThe cruise will include islands in the lower Cape Fear River where the birds
        have chosen their nesting sites. They are all North Carolina Audubon Bird Sanctuaries.

        \n\nBring your camera and binoculars to view nesting areas of many coastal water
        birds including pelicans, white ibis, great egrets and herons. Pack a picnic lunch
        if you would like. Soft drinks, water and snacks will be sold aboard ship.

        \n\nAdditional information is available by emailing birdislandscruise@capefeargardenclub.org.
    </string>
    <string name="this_box_is_going_to_contain_information_from_the_club_theme_page_on_website">
        Several landscape installations throughout New Hanover County have been initiated by the Cape Fear Garden Club.

        \n\nAIRLIE SHOWCASE GARDEN
        \nAirlie Showcase Garden was born in 2006 with an Asian design. Over time the garden had outgrown its borders.
        The idea of changing the garden to a Southern Garden was presented at the September 2015 General Meeting.
        In late winter of 2016 the Asian garden was torn out and the Southern Garden was completed in early April 2016.

        \n\nThe Southern Garden is filled with Encore Azaleas, Drift Roses, Endless Summer Hydrangeas, Yew Prostrata,
        and Drawf Larepetalum. The border for the garden is white Sasanqua Camellias. In the spring the garden has the
        sweet aroma of Confederate Jasmine which covers an arbor at the entrance. In addition to the plants there are two
        Red Maple trees that offer some shade. A slate walkway outlined with Dwarf Mondo grass leads to a white vineyard bench.

        \n\nThe garden has a different but tranquil feeling when it is lite during Enchanted Airlie in November and December
        each year. A committee of 20 Cape Fear Garden Club members maintain the Southern Garden through the year.

        \n\nBIRDS AND BUTTERFLIES Birds and Butterflies installs bluebird trails and butterfly gardens as the opportunity
        presents itself in the community, as well as assisting with community projects that relate to Birds and Butterflies.
        Bluebird trails include those at the Seaspray Landing community, in honor of Doris Ayers, a CFGC member, and the
        trail at River Bluffs, a low-impact development community overlooking the Cape Fear River. As a designated LID
        community, it provides a wetland area to temporarily store, filter and clean runoff water rather than using retention ponds.
        The provide habitat for many creatures such as birds, butterflies, bees, salamanders, toads and frogs.
        Bluebirds had taken up residence as of spring 2017 at both locations.

        \n\nAdditional committees focus on: civic improvements, such as tree canopy replacement after storms and Beauty
        Spot awards; conservation projects; gardening for wildlife, educating the public on how to create a wildlife habitat;
        and leading youth garden clubs, helping several local elementary schools plant wildlife habitats on their campus.
    </string>
    <string name="community_projects">Community Projects</string>
    <string name="lasting_legacy">Lasting Legacy</string>
    <string name="grants">Grants</string>
    <string name="this_box_is_going_to_contain_information_from_the_community_projects_page_on_website">
        For over 50 years, the Azalea Garden Tour, sponsored by Cape Fear Garden Club, has proudly
        returned hundreds of thousands of dollars to New Hanover County. Tour profits are granted to beautify,
        conserve, educate, inspire, and contribute to people of all ages using horticulture and garden
        development.

        \n\nBEAUTIFICATION ENDOWMENT FUND
        \nThe Cape Fear Garden Club works with the North Carolina Community Foundation (NCCF)
        to maintain and invest Club funds set aside to ensure the long-term commitment of the Club to
        its mission in the New Hanover County community. Events, such as the Southern Soiree in
        honor of notable Club member, are held each year to support this endowment fund.
    </string>
    <string name="back_to_civic_impact">Back to Civic Impact</string>
    <string name="this_box_is_going_to_contain_information_from_the_grant_app_page_benefits_of_grants_and_recent_grants_awarded">
        Proceeds of the 2018 Azalea Festival Garden Tour, totaling $72,326, were awarded to grant recipients
        on November 14, 2018. The Cape Fear Garden Club is pleased to have David Johnson, owner of Johnson
        Nursery-Gardens Direct, as a sponsor for the 2018 Grant Recipients received a $300 credit to be used at
        his nursery located in Willard or by ordering on line.

        \n\nGRANT RECIPIENTS
        \n\nAirlie Gardens Butterfly House
        \nAlliance for Cape Fear Trees
        \nBellamy Mansion Museum
        \nBrigade Boys and Girls Club
        \nCameron Art Museum
        \nCape Fear Clinic, Inc
        \nCape Fear Habitat for Humanity
        \nChildren’s Museum of Wilmington
        \nCoastal Preparatory Academy
        \nCodington Elementary School
        \nCommunity Enrichment Initiative, Inc
        \nDREAMS of Wilmington, Inc
        \nFirst Christian Church
        \nFriends of New Hanover County Arboretum
        \nFriends of Oakdale Cemetery
        \nThe Greater Wilmington Youth Initiative, Inc
        \nLake Forest Academy
        \nLower Cape Fear Historical Society
        \nLower Cape Fear Hospice
        \nNew Hanover County Arboretum Ability
        \nNew Hanover Parks and Gardens – Veterans Park
        \nNew Hanover High School
        \nNorth Carolina Coastal Federation
        \nSt. Andrews-Covenant Presbyterian Church
        \nWrightsville Beach Museum of History
        \nYMCA of Southeastern North Carolina
        \nStanding Grants
        \nNorth Carolina Audubon Society Grant
        \nCape Fear Community College Scholarship
        \nUniversity of North Carolina Wilmington Scholarship
    </string>
    <string name="edit_address">Edit Address</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
</resources>