<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/edit_address"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/streetTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/street_address"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp" />
    <EditText
        android:id="@+id/etStreet"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:nextFocusRight="@+id/etCity"
        android:nextFocusDown="@+id/etCity"
        android:nextFocusForward="@+id/etCity"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/cityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/city"
        android:textColor="?android:attr/colorForeground"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp" />
    <EditText
        android:id="@+id/etCity"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="sans-serif"
        android:nextFocusUp="@+id/etStreet"
        android:nextFocusLeft="@+id/etStreet"
        android:nextFocusRight="@+id/etState"
        android:nextFocusDown="@+id/etState"
        android:nextFocusForward="@+id/etState"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        tools:targetApi="jelly_bean"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/stateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/state"
        android:textColor="?android:attr/colorForeground"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp" />
    <EditText
        android:id="@+id/etState"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="2dp"
        android:nextFocusUp="@+id/etCity"
        android:nextFocusLeft="@+id/etCity"
        android:nextFocusRight="@+id/etZip"
        android:nextFocusDown="@+id/etZip"
        android:nextFocusForward="@+id/etZip"
        android:fontFamily="sans-serif"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        tools:targetApi="jelly_bean"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/zipTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/zip_code"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp" />
    <EditText
        android:id="@+id/etZip"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="2dp"
        android:nextFocusUp="@+id/etState"
        android:nextFocusLeft="@+id/etState"
        android:fontFamily="sans-serif"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        tools:targetApi="jelly_bean"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

</LinearLayout>